--- a/phonebook-spa/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/phonebook-spa/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -2,9 +2,9 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading...</em></p>
+<p *ngIf="!entries"><em>Loading...</em></p>
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts">
+<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="entries">
   <thead>
     <tr>
       <th>Date</th>
@@ -14,11 +14,10 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let forecast of forecasts">
-      <td>{{ forecast.date }}</td>
-      <td>{{ forecast.temperatureC }}</td>
-      <td>{{ forecast.temperatureF }}</td>
-      <td>{{ forecast.summary }}</td>
+    <tr *ngFor="let entry of entries">
+      <td>{{ entry.firstName }}</td>
+      <td>{{ entry.lastName }}</td>
+      <td>{{ entry.phoneNumber }}</td>
     </tr>
   </tbody>
 </table>
