--- a/phonebook-spa/ClientApp/src/phonebook/phone-book/phone-book.component.html
+++ b/phonebook-spa/ClientApp/src/phonebook/phone-book/phone-book.component.html
@@ -1,22 +1,32 @@
-<div>
-  <mat-toolbar color="primary">
-    <mat-toolbar-row>
-      <span>Phone Book App</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-    </mat-toolbar-row>
+<mat-toolbar>
+  <mat-toolbar-row class="top-bar">
+    <span class="example-spacer"></span>
+    <div>
+      <mat-icon fontIcon="recent_actors" class="top-bar-icon"></mat-icon>
+      <span class="top-bar-title">Phone Book App</span>
+    </div>
+    <span class="example-spacer"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
 
-    <mat-toolbar-row>
-      <span>Second Line</span>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-      </button>
-    </mat-toolbar-row>
-  </mat-toolbar>
+<mat-toolbar>
+  <mat-toolbar-row class="sub-bar">
+    <span>Contacts</span>
+    <span class="example-spacer"></span>
+    <button mat-raised-button color="primary" (click)="onAddContact()">
+      <mat-icon>add</mat-icon>Add Contact
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<br />
+<div class="contacts-list" *ngFor="let entry of entries">
+  <mat-card class="contact-card">
+    <mat-card-title>{{ entry.firstName }} {{ entry.lastName }} </mat-card-title>
+    <mat-card-subtitle>{{ entry.phoneNumber }}</mat-card-subtitle>
+    <mat-card-actions align="end">
+      <button mat-button color="primary"><mat-icon>edit</mat-icon></button>
+      <button mat-button color="warn"><mat-icon>delete</mat-icon></button>
+    </mat-card-actions>
+  </mat-card>
 </div>
